# agentmem

./: .gitignore  ADVANCED_VECTOR_ENGINE_REPORT.md  AGENTMEM_PROJECT_PLAN.md  COMMIT_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Cargo_simple.toml  DAILY_IMPLEMENTATION_SUMMARY_2024-06-18.md  DISTRIBUTED_VERIFICATION_REPORT.md  Dockerfile  FINAL_PROGRESS_REPORT.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTELLIGENT_MEMORY_ORGANIZER_REPORT.md  LANCEDB_INTEGRATION_REPORT.md  LICENSE  MEM0_COMPATIBILITY.md  MODULARIZATION_COMPLETION_REPORT.md  Makefile  PERFORMANCE_REPORT.md  PHASE1_COMPLETION_REPORT.md  PHASE2_AUTH_ANALYSIS.md  PHASE3_COMPLETION_REPORT.md  PHASE3_LLM_ANALYSIS.md  PHASE3_STREAMING_COMPLETION.md  PHASE4_HYBRID_SEARCH_COMPLETION.md  PHASE5_CORE_MEMORY_COMPLETION.md  PHASE6_TOOL_SANDBOX_COMPLETION.md  PHASE7_API_COMPLETION_REPORT.md  PHASE7_API_ENHANCEMENT_PLAN.md  PHASE7_COMPLETION_REPORT_FINAL.md  PHASE7_FINAL_COMPLETION_SUMMARY.md  PHASE7_REAL_IMPLEMENTATION_STATUS.md  PHASE7_WEBSOCKET_SSE_COMPLETION.md  PLAN4_EXECUTIVE_SUMMARY.md  PROGRESS_REPORT.md  PROGRESS_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS_2025_10_01.md  PROJECT_STATUS_FINAL.md  (+37 more)
agent-db-core/: CHANGELOG.md  Cargo.toml
agent-db-core/benches/: performance_bench.rs
agent-db-core/examples/: basic_usage.rs
agent-db-core/include/: agent_state_db.h  agent_state_db_generated.h
agent-db-core/src/: lib.rs  lib_old.rs
agent-db-core/src/agent_state/: mod.rs
agent-db-core/src/distributed/: mod.rs
agent-db-core/src/ffi/: mod.rs
agent-db-core/src/memory/: mod.rs
agent-db-core/src/performance/: mod.rs  monitoring.rs
agent-db-core/src/rag/: mod.rs
agent-db-core/src/realtime/: mod.rs
agent-db-core/src/security/: mod.rs
agent-db-core/src/vector/: mod.rs
agent-db-core/test_db/: documents.json  memories.json  states.json
agent-db-core/tests/: integration_test.rs  minimal_test.c  simple_test.c  stress_test.rs  stress_tests.rs  test_c_ffi.c  test_lancedb_integration.c  test_lancedb_rust.rs  test_lancedb_simple.c  test_memory_organizer.c  test_rag_engine.c  tests.rs  tests_new_features.rs
crates/agent-mem-client/: Cargo.toml
crates/agent-mem-client/src/: client.rs  config.rs  error.rs  lib.rs  mem5_client.rs  models.rs  retry.rs
crates/agent-mem-compat/: Cargo.toml  README.md
crates/agent-mem-compat/src/: client.rs  cloud_integration.rs  compute_optimization.rs  config.rs  context_aware.rs  enterprise_monitoring.rs  enterprise_security.rs  error.rs  graph_memory.rs  lib.rs  personalization.rs  procedural_memory.rs  storage_optimization.rs  tests.rs  types.rs  utils.rs
crates/agent-mem-config/: Cargo.toml
crates/agent-mem-config/src/: factory.rs  lib.rs  llm.rs  memory.rs  storage.rs  validation.rs
crates/agent-mem-core/: Cargo.toml  DATABASE_SCHEMA.md  PERFORMANCE_OPTIMIZATION.md
crates/agent-mem-core/src/: adaptive_strategy.rs  client.rs  collaboration.rs  compression.rs  conflict.rs  conflict_resolver.rs  context.rs  context_aware_search.rs  engine.rs  graph_memory.rs  graph_optimization.rs  hierarchical_service.rs  hierarchy.rs  hierarchy_manager.rs  history.rs  importance_scorer.rs  intelligence.rs  lib.rs  lib_old.rs  lifecycle.rs  llm_optimizer.rs  logging.rs  manager.rs  monitoring.rs  operations.rs  search.rs  security.rs  storage.rs  temporal_graph.rs  temporal_reasoning.rs  tenant.rs  types.rs  vector_ecosystem.rs
crates/agent-mem-core/tests/: core_memory_test.rs  database_integration_test.rs  hybrid_search_test.rs  performance_benchmark.rs  repository_integration_test.rs  storage_optimization_test.rs  user_repository_test.rs
crates/agent-mem-distributed/: Cargo.toml
crates/agent-mem-distributed/src/: cluster.rs  consensus.rs  coordination.rs  discovery.rs  lib.rs  load_balancer.rs  replication.rs  sharding.rs
crates/agent-mem-embeddings/: Cargo.toml
crates/agent-mem-embeddings/src/: config.rs  factory.rs  lib.rs  utils.rs
crates/agent-mem-intelligence/: Cargo.toml
crates/agent-mem-intelligence/src/: conflict_resolution.rs  decision_engine.rs  fact_extraction.rs  importance_evaluator.rs  intelligent_processor.rs  lib.rs
crates/agent-mem-llm/: Cargo.toml
crates/agent-mem-llm/src/: client.rs  factory.rs  lib.rs  metrics.rs  retry.rs
crates/agent-mem-observability/: Cargo.toml  README.md
crates/agent-mem-observability/benches/: observability.rs
crates/agent-mem-observability/examples/: basic_usage.rs
crates/agent-mem-observability/grafana/: agentmem-dashboard.json
crates/agent-mem-observability/src/: error.rs  health.rs  lib.rs  logging.rs  metrics.rs  performance.rs  tracing_ext.rs
crates/agent-mem-performance/: Cargo.toml
crates/agent-mem-performance/src/: batch.rs  benchmark.rs  cache.rs  concurrency.rs  config_manager.rs  error_recovery.rs  lib.rs  metrics.rs  optimization.rs  pool.rs  query.rs  telemetry.rs
crates/agent-mem-server/: Cargo.toml
crates/agent-mem-server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  server.rs  sse.rs  telemetry.rs  websocket.rs
crates/agent-mem-server/tests/: auth_integration_test.rs  integration_tests.rs
crates/agent-mem-storage/: Cargo.toml
crates/agent-mem-storage/src/: cache.rs  factory.rs  lib.rs  method_template.rs  performance.rs  utils.rs
crates/agent-mem-tools/: Cargo.toml  README.md
crates/agent-mem-tools/benches/: tool_execution.rs
crates/agent-mem-tools/examples/: basic_usage.rs
crates/agent-mem-traits/: Cargo.toml
crates/agent-mem-utils/: Cargo.toml
examples/advanced-search-demo/: Cargo.toml
examples/api-server-demo/: Cargo.toml
examples/client-demo/: Cargo.toml
examples/client-server-integration-test/: Cargo.toml
examples/cloud-native-demo/: Cargo.toml
examples/complete_demo/: Cargo.toml
examples/comprehensive-test/: Cargo.toml
examples/compute-optimization-demo/: Cargo.toml
examples/deepseek-test/: Cargo.toml
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
examples/embedding-demo/: Cargo.toml
examples/enhanced-messages-demo/: Cargo.toml
examples/enterprise-monitoring-demo/: Cargo.toml
(+774 files in other folders)
