[package]
name = "agent-db"
version = "0.1.0"
edition = "2021"
description = "High-performance AI agent database built on Rust+Zig+LanceDB hybrid architecture"
license = "MIT"
repository = "https://github.com/louloulin/agent-db"
homepage = "https://github.com/louloulin/agent-db"
documentation = "https://agent-db.readthedocs.io"
keywords = ["ai", "agent", "database", "vector", "rag"]
categories = ["database", "science"]

[lib]
name = "agent_db_rust"
crate-type = ["cdylib", "staticlib"]

[dependencies]
lancedb = "0.20.0"
arrow = "55.1"
arrow-array = "55.1"
arrow-schema = "55.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
cbindgen = "0.26"
libc = "0.2"
rand = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"
hex = "0.4"

[build-dependencies]
cbindgen = "0.26"

[[bin]]
name = "generate_bindings"
path = "src/generate_bindings.rs"
