[package]
name = "agent-db-core"
version = "0.2.0"
edition = "2021"
description = "AgentDB Rust core engine - High-performance AI agent database"
license = "MIT"
repository = "https://github.com/louloulin/agent-db"
homepage = "https://github.com/louloulin/agent-db"
documentation = "https://agent-db.readthedocs.io"
keywords = ["ai", "agent", "database", "vector", "rag"]
categories = ["database", "science"]

[lib]
name = "agent_db_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "generate_bindings"
path = "src/generate_bindings.rs"

[dependencies]
lancedb = "0.21.2"
arrow = "55.2"
arrow-array = "55.2"
arrow-schema = "55.2"
arrow-buffer = "55.2"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
rand = "0.8"
env_logger = "0.11.8"
num_cpus = "1.17.0"
bincode = "2.0.1"
flate2 = "1.1.2"
log = "0.4.27"
sha2 = "0.10"
aes-gcm = "0.10"
hex = "0.4"
cbindgen = "0.26"

[build-dependencies]
cbindgen = "0.26"

[dev-dependencies]
tempfile = "3.20.0"
