[package]
name = "agent-mem-client"
version = "0.1.0"
edition = "2021"
description = "HTTP client SDK for AgentMem - Enterprise-grade memory management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/agentmem/agentmem"
keywords = ["memory", "ai", "llm", "client", "sdk"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
# Core AgentMem dependencies
agent-mem-traits = { path = "../agent-mem-traits" }
agent-mem-utils = { path = "../agent-mem-utils" }
agent-mem-core = { path = "../agent-mem-core" }
agent-mem-compat = { path = "../agent-mem-compat" }
agent-mem-config = { path = "../agent-mem-config" }
agent-mem-performance = { path = "../agent-mem-performance" }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2.0"

# Connection pooling and retry
backoff = "0.4"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
