[package]
name = "agent-mem-compat"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Mem0 compatibility layer for AgentMem"

[dependencies]
# AgentMem core dependencies (minimal for compatibility layer)
agent-mem-traits = { path = "../agent-mem-traits" }
agent-mem-performance = { path = "../agent-mem-performance" }

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# HTTP client
reqwest.workspace = true

# Collections
dashmap.workspace = true

[dev-dependencies]
tokio-test = "0.4"
tempfile.workspace = true

[features]
default = []
python-bindings = []
