[package]
name = "agent-mem-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Configuration management for AgentMem memory platform"

[dependencies]
agent-mem-traits = { path = "../agent-mem-traits" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
config.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
