[package]
name = "agent-mem-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core memory management for AgentMem memory platform"

[dependencies]
agent-mem-traits = { path = "../agent-mem-traits" }
agent-mem-utils = { path = "../agent-mem-utils" }
agent-mem-config = { path = "../agent-mem-config" }

# Core dependencies
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log = "0.4"

# Storage and async
async-trait.workspace = true
tracing.workspace = true
futures = "0.3"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"

# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"

[features]
default = []
persistence = []
vector-search = []
