[package]
name = "agent-mem-distributed"
version = "2.0.0"
edition = "2021"
description = "Distributed computing support for AgentMem"
license = "MIT OR Apache-2.0"
repository = "https://github.com/agentmem/agentmem"
keywords = ["memory", "ai", "distributed", "cluster", "sharding"]
categories = ["distributed-systems", "concurrency", "database"]

[dependencies]
# Core dependencies
agent-mem-traits = { path = "../agent-mem-traits" }
agent-mem-core = { path = "../agent-mem-core" }
agent-mem-config = { path = "../agent-mem-config" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Time handling
chrono = { workspace = true, features = ["serde"] }

# UUID generation
uuid = { workspace = true, features = ["v4", "serde"] }

# Networking
reqwest = { workspace = true, features = ["json"] }
hyper = { workspace = true, features = ["full"] }

# Distributed systems
ring = "0.17"

# Collections and utilities
dashmap = "5.5"
parking_lot = "0.12"

# Metrics
metrics = { version = "0.21", optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[features]
default = ["metrics"]
metrics = ["dep:metrics"]
