[package]
name = "agent-mem-embeddings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Embedding models for AgentMem memory platform"

[dependencies]
agent-mem-traits = { path = "../agent-mem-traits" }
agent-mem-utils = { path = "../agent-mem-utils" }

# 核心依赖
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true

# HTTP客户端（用于API调用）
reqwest = { version = "0.11", features = ["json"] }

# 本地嵌入模型依赖（可选）
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }
candle-transformers = { version = "0.3", optional = true }
tokenizers = { version = "0.15", optional = true }

# HuggingFace Hub集成（可选）
hf-hub = { version = "0.3", optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"

[features]
default = ["openai"]

# 嵌入提供商
openai = []
huggingface = ["dep:hf-hub"]
local = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers"]
anthropic = []
cohere = []

# 所有提供商
all-providers = ["openai", "huggingface", "local"]
