[package]
name = "agent-mem-embeddings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Embedding models for AgentMem memory platform"

[dependencies]
agent-mem-traits = { path = "../agent-mem-traits" }
agent-mem-utils = { path = "../agent-mem-utils" }

# 核心依赖
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true

# HTTP客户端（用于API调用）
reqwest = { version = "0.11", features = ["json"] }

# 本地嵌入模型依赖（可选）
candle-core = { version = "0.6", optional = true }
candle-nn = { version = "0.6", optional = true }
candle-transformers = { version = "0.6", optional = true }
tokenizers = { version = "0.19", optional = true }

# ONNX Runtime 支持
ort = { version = "2.0.0-rc.10", features = ["load-dynamic"], optional = true }
ndarray = { version = "0.15", optional = true }

# HuggingFace Hub集成（可选）
hf-hub = { version = "0.3", optional = true }

# 本地模型缓存和管理
dirs = "5.0"
sha2 = "0.10"
bytes = "1.0"

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"

[features]
default = ["openai", "local"]

# 嵌入提供商
openai = []
huggingface = ["dep:hf-hub"]
local = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers"]
onnx = ["dep:ort", "dep:ndarray"]
anthropic = []
cohere = []

# 所有提供商
all-providers = ["openai", "huggingface", "local", "onnx"]
