[package]
name = "agent-mem-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "LLM integration for AgentMem memory platform"

[dependencies]
agent-mem-traits = { path = "../agent-mem-traits" }
agent-mem-utils = { path = "../agent-mem-utils" }

# 核心依赖
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true

# HTTP客户端和异步支持
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"

# 可选的LLM提供商依赖
openai-api-rs = { version = "5.0", optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"

[features]
default = ["openai", "anthropic"]
openai = ["openai-api-rs"]
anthropic = []
azure = []
gemini = []
ollama = []
all-providers = ["openai", "anthropic", "azure", "gemini", "ollama"]
