[package]
name = "agent-mem-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Storage backends for AgentMem memory platform"

[dependencies]
agent-mem-traits = { path = "../agent-mem-traits" }
agent-mem-utils = { path = "../agent-mem-utils" }

# 核心依赖
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true

# 向量存储依赖
# HTTP客户端（用于多个提供商）
reqwest = { version = "0.11", features = ["json"] }

# 本地向量存储依赖（暂时注释掉，避免版本问题）
# lancedb = { version = "0.4", optional = true }
# arrow = { version = "52", optional = true }
# qdrant-client = { version = "1.7", optional = true }
# pinecone-sdk = { version = "0.1", optional = true }

# 本地存储
sled = { version = "0.34", optional = true }
rocksdb = { version = "0.21", optional = true }

# 内存存储
dashmap = { version = "5.5", optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"

[features]
default = ["memory"]

# 向量存储后端
chroma = []
# lancedb = ["dep:lancedb", "dep:arrow"]
# qdrant = ["dep:qdrant-client"]
# pinecone = ["dep:pinecone-sdk"]

# 本地存储后端
sled = ["dep:sled"]
rocksdb = ["dep:rocksdb"]

# 内存存储
memory = ["dep:dashmap"]

# 所有后端
all-backends = [
    "chroma", "sled", "rocksdb", "memory"
    # "lancedb", "qdrant", "pinecone"
]
